--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.1.3",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
